# pyfactor_model

./: README.md  pyproject.toml
docs/: guide.md  setup.md
src/: main.py
src/data/: data_fetcher.py
src/data/constituents/: snp_constituents.csv
src/models/: factor_model.py
src/utils/: backtesting.py  data_preparation.py  performance_evaluation.py  portfolio_construction.py  visualization.py
tests/: test_data_fetcher.py  test_factor_model.py
